test/typecheck/errors/bad-views12.boa
view sv10 {
	o: output sum[string][string] of int;
}

v: table[count: string][year: string] of happy: int = sv10/o;

st1 := v["abc"];
st2 := st1["def"][3][5];
